src/objects/Apttus_Config2__ProductAttribute__c.object
<CustomObject>
    <description>Represents a single attribute in a product attribute group</description>
    <fields>
        <fullName>APTS_Ext_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>APTS Ext ID</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AttributeGroupId__c</fullName>
        <description>ID of the associated product attribute group</description>
        <label>Attribute Group</label>
        <referenceTo>Apttus_Config2__ProductAttributeGroup__c</referenceTo>
        <relationshipLabel>Attributes</relationshipLabel>
        <relationshipName>Attributes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CascadeSharedAttributeStatus__c</fullName>
        <description>Indicates one or more line status to which the cascade shared attribute updates should apply to</description>
        <inlineHelpText>Indicates one or more line status to which the cascade shared attribute updates should apply to</inlineHelpText>
        <label>Cascade Shared Attribute Status</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Existing</fullName>
                </value>
                <value>
                    <fullName>Renewed</fullName>
                </value>
                <value>
                    <fullName>Incremented</fullName>
                </value>
                <value>
                    <fullName>Incremented and Merged</fullName>
                </value>
                <value>
                    <fullName>Amended</fullName>
                </value>
                <value>
                    <fullName>Changed Configuration</fullName>
                </value>
                <value>
                    <fullName>Upgraded</fullName>
                </value>
                <value>
                    <fullName>Split</fullName>
                </value>
                <value>
                    <fullName>Split and Renewed</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CascadeSharedAttributeUpdates__c</fullName>
        <description>Indicates whether updates to shared bundle attributes are cascaded to options in the bundle</description>
        <inlineHelpText>Indicates whether updates to shared bundle attributes are cascaded to options in the bundle</inlineHelpText>
        <label>Cascade Shared Attribute Updates</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DisplayType__c</fullName>
        <label>Display Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Checkbox</fullName>
                </value>
                <value>
                    <fullName>Picklist</fullName>
                </value>
                <value>
                    <fullName>Picklist (Multi-Select)</fullName>
                </value>
                <value>
                    <fullName>Radio</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__FieldUpdateId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is deprecated</description>
        <label>Field Update (Deprecated)</label>
        <referenceTo>Apttus_Config2__FieldExpression__c</referenceTo>
        <relationshipLabel>Product Attributes</relationshipLabel>
        <relationshipName>ProductAttributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Field__c</fullName>
        <description>The field in the business object which stores the attribute value</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IsExtension__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the attribute is an extension attribute</description>
        <inlineHelpText>Indicates whether the attribute is an extension attribute</inlineHelpText>
        <label>Is Extension</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IsHidden__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the attribute is hidden</description>
        <inlineHelpText>Indicates whether the attribute is hidden</inlineHelpText>
        <label>Is Hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IsPrimary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether or not this attribute appears in the product detail dialog in the cart.</description>
        <inlineHelpText>Indicates whether or not this attribute appears in the product detail dialog in the cart.</inlineHelpText>
        <label>Is Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IsReadOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the attribute is read-only</description>
        <inlineHelpText>Indicates whether the attribute is read-only</inlineHelpText>
        <label>Is Read Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductAttributeValueField__c</fullName>
        <description>The product attribute value field which maps to the business object field. If blank, it is assumed the API names are the same.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Attribute Value Field (DEPR)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Sequence__c</fullName>
        <description>The attribute sequence</description>
        <label>Sequence</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Product Attribute</label>
    <nameField>
        <displayFormat>AT-{0000000000}</displayFormat>
        <label>Attribute Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Attributes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>